<resources>
    <string name="app_name">VSS</string>
    <string name="share">Teilen</string>
    <string name="app_native_lib">vss</string>
    <string name="title_activity_main_menu">MainMenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Schublade schließen</string>
    <string name="action_settings">Einstellungen</string>
    <string name="eyediseases_settings_store">Einstellungen speichern</string>
    <string name="eyediseases_settings_load">Einstellungen laden</string>
    <string name="eyediseases_settings_reset">Einstellungen zurücksetzen</string>
    <string name="splitscreen_simulation">Splitscreen Simulation</string>
    <string name="start_simulator">Simulation starten</string>
    <string name="eyediseases_settings">Einstellungen</string>
    <string name="simulation_source">Quelle</string>
    <string name="simulation">Simulation</string>
    <string name="knowledgebase">Wissensbasis</string>
    <string name="knowledgebase_overview">Übersicht</string>
    <string name="readme">Bedienungsanleitung</string>
    <string name="settings">Einstellungen</string>
    <string name="app_settings">App</string>
    <string name="webui_server">Server</string>
    <string name="webui_onoff">An/Aus</string>
    <string name="main_loader_status">Starting…</string>
    <string name="app_description">Fehlsichtigkeitssimulator</string>
    <string name="cancel">Abbrechen</string>
    <string name="eyediseases_settings_reset_confirmation">Sind Sie sicher, dass sie die Simulation-Einstellungen zurücksetzen wollen?\nFalls Sie diese nicht gespeicher haben, gehen sie verloren!</string>
    <string name="store">Speichern</string>
    <string name="main_loader_status_successful">Success!</string>
    <string name="main_loader_status_failed">Whoops! 😅\n\nLoading native code failed.</string>
    <string name="store_connection">Verbindung speichern</string>
    <string name="new_server_connection">Neue Verbindung</string>
    <string name="webui_disconnect">Verbindung trennen</string>
    <string name="webui_disconnect_confirmation">sicher</string>
    <string name="next">Weiter</string>
    <string name="name">Name</string>
    <string name="uri">URI</string>
    <string name="create">Erstellen</string>
    <string name="connected">verbunden</string>
    <string name="disconnected">nicht verbunden</string>
    <string name="webui_server_created">Neuen Server erstellt</string>
    <string name="webapp_connected">WebApp verbunden</string>
    <string name="webapp_disconnected">WebApp nicht verbunden</string>
    <string name="webapp_connection_created">Neue Verbindung erstellt</string>
    <string name="eyediseases_settings_reset_successful">Simulations-Einstellungen zurückgesetzt</string>
    <string name="eyediseases_settings_reset_failed">Zurücksetzen fehlgeschlagen</string>
    <string name="eyediseases_settings_load_successful">Simulations-Einstellungen geladen</string>
    <string name="eyediseases_settings_load_failed">Laden fehlgeschlagen</string>
    <string name="eyediseases_settings_store_successful">Simulations-Einstellungen gespeichert</string>
    <string name="eyediseases_settings_store_failed">Speichern fehlgeschlagen</string>
    <string name="save_as">Speichern unter</string>
    <string name="splitscreen_activated">Split Screen activiert</string>
    <string name="splitscreen_deactivated">Split Screen deaktiviert</string>
    <string name="webui">Web-UI</string>
    <string name="webui_channel">Channel</string>
    <string name="connecting">verbinden...</string>
    <string name="disconnecting">trennen...</string>
    <string name="leaving">verlassen...</string>
    <string name="joining">beitreten...</string>
    <string name="not_joined">nicht beigetreten</string>
    <string name="joined">beigetreten</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
    <string name="join_channel">Channel beitreten</string>
    <string name="new_channel">Neuer Channel</string>
    <string name="webui_channel_leaving">Verlassen</string>
    <string name="webui_channel_leaving_confirmation">sicher?</string>
    <string name="send_feedback">Feedback abschicken</string>
    <string name="feedback">Feedback</string>
    <string name="loading">Loading...</string>
</resources>
